# archipelago2035

./: .gitignore  README.md  eda-v2.ipynb  export.py  main.py  metric.py  metric_counter.ipynb  prepare_yolo_data.py  pyproject.toml  train_frcnn_uav_v2.py  train_yolo11_v4.py  train_yolo11_v6.py
solution/: solution.py
