[project]
name = "archipelago2035"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "nbclient>=0.10.2",
    "nbconvert>=7.16.6",
    "notebook>=7.4.5",
    "numba>=0.61.2",
    "numpy>=1.26,<2.0",
    "onnx>=1.18.0",
    "onnxruntime-gpu>=1.18.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.1",
    "pip>=25.2",
    "tqdm>=4.67.1",
]
